src/tests/code/pass/pass_int_types.u
entrypoint:~()
{
	i16{i8{0b10000000}}	// type casts
}
->(i64{1})