src/tests/code/fail/fail_variable_shadowing_keyword.u
entrypoint:~()
{
	if:i64{42};
	else:i64{42};
	//while:i64{42};
	//return:i64{42};
}
->(i64{1})